Fixed return values in some cases; added comment

--- a/test.html
+++ b/test.html
@@ -23,6 +23,8 @@
             <span class='whatever'></span>
         </div>
 
+        <div class='new'></div>
+
 
 
         <script src='html_protos.js'></script>
